<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="20dp"
    tools:context=".ActivityC">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <ImageButton
            android:id="@+id/imageButtonProfile"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginBottom="20dp"
            app:srcCompat="@drawable/ic_profile_pic" />

        <TextView
            android:id="@+id/txtName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_name"
            android:textColor="@color/textColor"
            android:textSize="24sp" />
    </LinearLayout>



    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/textColor"
        android:layout_marginBottom="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Track:"
            android:textColor="@color/textColor"
            android:textSize="24sp"
            android:layout_marginRight="16dp" />

        <TextView
            android:id="@+id/textView_track"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/track"
            android:textColor="@color/textColor"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Country:"
            android:textColor="@color/textColor"
            android:textSize="24sp"
            android:layout_marginRight="16dp"/>

        <TextView
            android:id="@+id/textView_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_country"
            android:textColor="@color/textColor"
            android:textSize="24sp" />


    </LinearLayout>

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:layout_marginBottom="20dp"
       android:layout_marginLeft="16dp">

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="Email:"
           android:textColor="@color/textColor"
           android:textSize="24sp"
           android:layout_marginRight="16dp"/>

       <TextView
           android:id="@+id/textView_Email"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/profile_email"
           android:textColor="@color/textColor"
           android:textSize="24sp" />
   </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Phone Number:"
            android:textColor="@color/textColor"
            android:textSize="24sp"
            android:layout_marginRight="16dp"/>

        <TextView
            android:id="@+id/textView_phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_phone_number"
            android:textColor="@color/textColor"
            android:textSize="24sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Slack Username:"
            android:textColor="@color/textColor"
            android:textSize="24sp"
            android:layout_marginRight="16dp"/>

        <TextView
            android:id="@+id/txt_Slack_Username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slack_username"
            android:textColor="@color/textColor"
            android:textSize="24sp" />


    </LinearLayout>

</LinearLayout>